--- a/turnout/index.css
+++ b/turnout/index.css
@@ -13,10 +13,17 @@
 .signout-btn{
   position: absolute;
   text-align: right;
-  top: 60px;
-  right: 40px;
+  top: 20px;
+  right: 20px;
 }
 
 .signin{
   margin: auto;
+}
+
+.event-card{
+  border: 2px solid #2C3E50;
+  margin-top: 10px;
+  border-radius: 4px;
+  margin-bottom: 10px
 }
